# NLAI

./: CMakeLists.txt  README.md
include/: nn.hpp  utlis.h
include/nn/: nn.hpp
nlai/src/deep_learning/cnn/: cnn.hpp
src/: CMakeLists.txt  nn.cpp  utlis.cpp  utlis.h
src/CRF/: crf.cpp  crf.h
src/Supervised/CNN/: convolutional_neural_networks.cpp  convolutional_neural_networks.h
src/Supervised/Decision_Trees/: decision_trees.cpp  decision_trees.h
src/Supervised/GBDT/: gradient_boosting_decision_tree.h
src/Supervised/Logistic_regression/: logistic_regression.cpp  logistic_regression.h
src/Supervised/NN/: neural_network.cpp  neural_network.h  recurrent_neural_network.h
src/Supervised/Naive_Bayes/: naive_bayes.cpp  naive_bayes.h
src/Supervised/Neural_network/: neural_network.cpp  neural_network.h
src/Supervised/RNN/: recurrent_neural_network.cpp  recurrent_neural_network.h
src/Supervised/SVM/: support_vector_machine.cpp  support_vector_machine.h
src/Supervised/Svm/: support_vector_machine.cpp  support_vector_machine.h
src/UnSupervised/DBSCAN/: dbscan.cpp  dbscan.h
src/UnSupervised/K-means/: k_means.cpp  k_means.h
src/UnSupervised/PCA/: principal_component_analysis.cpp  principal_component_analysis.h
src/deep_learning/mlp/: mlp.hpp
src/deep_learning/rnn/: rnn.hpp
src/graph/: naive_bayes.h
src/linear/: logistic_regression.cpp  logistic_regression.h  support_vector_machine.cpp
src/mashine_learning/k-menas/: k-means.h
src/mashine_learning/lr/: logistic_regression.hpp
src/network/: convolution_neural_networks.cpp  convolution_neural_networks.h  neural_network.cpp
src/nn/: nn.cpp  nn.hpp
src/tree/: decision_trees.cpp  decision_trees.h  gradient_boosting_decision_tree.cpp
test/: CMakeLists.txt  main.cpp  test_main.cpp
