cmake_minimum_required(VERSION 3.12)
project(NLAI)
include_directories(${PROJECT_SOURCE_DIR}/include)
set(CMAKE_CXX_STANDARD 11)
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set (SOURCE_DIR             ${PROJECT_SOURCE_DIR}/src)
add_subdirectory (src)
add_subdirectory(test)
add_executable(NLAI ${PROJECT_SOURCE_DIR}/src/)
